--- a/index.html
+++ b/index.html
@@ -201,35 +201,35 @@ We tailor every project to your preferences, assisting with colour choice, finis
 We offer complete <strong>fence installation and gate fitting</strong> services, covering all types of timber fences, including closeboard, feather edge, lap panels, and decorative designs. Our team installs posts with precision, ensures panels are level, and uses quality fixings for long-lasting results.
 In addition to full installations, we carry out repairs for broken or leaning fences, including post replacement and storm damage restoration. Whether you require boundary fencing, garden dividers, or bespoke timber solutions, our service guarantees structural integrity, security, and aesthetic appeal.
 </p>
-<a href="/fence-installation.html" class="service-btn">View Fence Installation</a>
+<a href="/services/fence-installation.html" class="service-btn">View Fence Installation</a>
 
 <h2>Garden Maintenance</h2>
 <p>
 Our <strong>garden services</strong> cater to every requirement, from small one-off jobs to full landscaping projects. We handle lawn care, hedge trimming, weeding, planting, and seasonal maintenance, ensuring your garden remains tidy, healthy, and visually appealing.
 For larger projects, we design and implement landscaping solutions, including patios, decorative gravel, raised beds, turfing, and soft planting. Every project is tailored to your space, style, and budget, combining practicality with visual impact. Regular garden maintenance prevents overgrowth, enhances plant health, and creates inviting outdoor spaces for family and entertaining.
 </p>
-<a href="/garden.html" class="service-btn">View Garden Services</a>
+<a href="/services/garden.html" class="service-btn">View Garden Services</a>
 
 <h2>Gutter Replacement</h2>
 <p>
 Keeping your gutters, fascias, and downpipes in top condition protects your property from water damage. Our <strong>gutter replacement services</strong> include inspection, removal of old or damaged gutters, and installation of high-quality, weather-resistant systems.
 We also provide cleaning, downpipe maintenance, and fascia restoration. Properly maintained gutters prevent leaks, structural damage, and staining to your property exterior. Our expert team ensures installations are secure, aligned, and durable, providing long-term protection and peace of mind.
 </p>
-<a href="/guttering.html" class="service-btn">View Gutter Services</a>
+<a href="/services/guttering.html" class="service-btn">View Gutter Services</a>
 
 <h2>Pressure Washing</h2>
 <p>
 Our <strong>pressure washing services</strong> refresh and restore all exterior surfaces, including patios, driveways, decking, paths, and brickwork. We remove moss, algae, dirt, and staining to reveal clean, attractive surfaces.
 Pressure washing improves safety by reducing slippery surfaces and enhances kerb appeal, increasing the value of your property. We use professional-grade equipment and safe cleaning methods suitable for all surfaces. Both domestic and commercial properties benefit from our high-quality, reliable exterior cleaning solutions.
 </p>
-<a href="/pressure-washing.html" class="service-btn">View Pressure Washing</a>
+<a href="/services/pressure-washing.html" class="service-btn">View Pressure Washing</a>
 
 <h2>uPVC Restoration</h2>
 <p>
 Our <strong>uPVC restoration services</strong> bring windows, doors, and conservatories back to their original condition. We clean and restore uPVC frames, sills, and fittings, remove stains, algae, and weathering, and polish surfaces for long-lasting protection.
 Services include conservatory roof cleaning, gutter and fascia maintenance, and full internal and external valets. We use professional, safe products and techniques to ensure a thorough restoration without damaging seals or frames. A restored uPVC exterior enhances both the appearance and value of your property while ensuring functionality for years to come.
 </p>
-<a href="/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
+<a href="/services/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
 
 </main>
 
