--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ Services include conservatory roof cleaning, gutter and fascia maintenance, and 
 
 <footer>
 © Home Repairs 4U | Exterior Decorating • Fence Installation • Garden Maintenance • Gutter Replacement • Pressure Washing • uPVC Restoration | Askern DN6 | Call 07735 873694
+  <a href="/services/garden.html" class="service-btn">View Garden Services</a>
 </footer>
 
 </body>
