--- a/test.html
+++ b/test.html
@@ -95,7 +95,7 @@ Total Price: £${total.toFixed(2)}
 Please contact me to confirm this estimate.
 `;
 
-let mailtoLink = `martinsteel940@gmail.com?subject=Pressure Washing Quote Request&body=${encodeURIComponent(emailBody)}`;
+let mailtoLink = mailto:martinsteel940@gmail.com?subject=Pressure Washing Quote Request&body=${encodeURIComponent(emailBody)}`;
 
 // HTML output
 document.getElementById('quoteResult').innerHTML = `
