--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -174,7 +174,91 @@ Home
 Welcome to <strong>Home Repairs 4U</strong> — your trusted local specialist for <strong>pressure washing</strong>, <strong>jet washing</strong> and <strong>professional outdoor surface cleaning</strong> throughout <strong>Askern DN6</strong> and every surrounding area within a 10-mile radius.
 With over 30 years of industry experience, we provide reliable exterior cleaning that restores tired, weathered and dirty surfaces back to a bright, clean, safe condition.
 </p>
+<section id="pressure-wash-quote" style="max-width:900px;margin:30px auto;padding:25px;background:#fff;border:1px solid #ccc;">
+<h2>Instant Pressure Washing Quote</h2>
+<p>Use this calculator to get an estimate for your pressure washing service.</p>
 
+<form id="quoteForm">
+<label for="sqm">How many square metres?*</label><br>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required style="width:100%;padding:8px;margin:6px 0;"><br>
+
+<input type="checkbox" id="jetwash" name="jetwash" checked>
+<label for="jetwash">Jet wash only</label><br>
+
+<input type="checkbox" id="fungicide" name="fungicide">
+<label for="fungicide">Fungicide treatment</label><br>
+
+<input type="checkbox" id="hardbrush" name="hardbrush">
+<label for="hardbrush">Hard brush</label><br>
+
+<input type="checkbox" id="resanding" name="resanding">
+<label for="resanding">Resanding</label><br>
+
+<input type="checkbox" id="sealing" name="sealing">
+<label for="sealing">Sealing</label><br>
+
+<button type="button" onclick="calculateQuote()" style="margin-top:15px;padding:12px 24px;background:#000;color:#fff;border:2px solid #000;border-radius:6px;font-weight:bold;">Get Quote</button>
+</form>
+
+<div id="quoteResult" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
+</section>
+
+<script>
+function calculateQuote() {
+// Accept comma or dot decimals
+const sqmInput = document.getElementById('sqm').value.trim().replace(',', '.');
+const sqm = parseFloat(sqmInput);
+
+if (isNaN(sqm) || sqm <= 0) {
+alert("Please enter a valid number of square metres.");
+return;
+}
+
+let total = 40; // Base service fee
+let selectedOptions = [];
+
+// Add explanation for the base fee (always included)
+selectedOptions.push(`Base service fee (travel, setup & loading): £40.00`);
+
+// Options
+if (document.getElementById('jetwash').checked) {
+let price = sqm * 2.5;
+selectedOptions.push(`Jet wash only: £${price.toFixed(2)}`);
+total += price;
+}
+if (document.getElementById('fungicide').checked) {
+let price = sqm * 0.8;
+selectedOptions.push(`Fungicide treatment: £${price.toFixed(2)}`);
+total += price;
+}
+if (document.getElementById('hardbrush').checked) {
+let price = sqm * 0.7;
+selectedOptions.push(`Hard brush: £${price.toFixed(2)}`);
+total += price;
+}
+if (document.getElementById('resanding').checked) {
+let price = sqm * 3.5;
+selectedOptions.push(`Resanding: £${price.toFixed(2)}`);
+total += price;
+}
+if (document.getElementById('sealing').checked) {
+let price = sqm * 4.5;
+selectedOptions.push(`Sealing: £${price.toFixed(2)}`);
+total += price;
+}
+
+total = total.toFixed(2);
+
+// Build HTML Output
+let resultHTML = `<p><strong>You selected:</strong></p><ul>`;
+selectedOptions.forEach(option => {
+resultHTML += `<li>${option}</li>`;
+});
+resultHTML += `</ul><p><strong>Total price: £${total}</strong></p>`;
+
+document.getElementById('quoteResult').innerHTML = resultHTML;
+}
+</script>
 <p>
 Outdoor surfaces face constant exposure to the elements. Rain, algae, moss, car oil, tyre marks, mud, UV fading and pollution all contribute to the gradual decline of driveways, patios, decking and pathways. Many homeowners are surprised by how quickly surfaces lose their original colour and how easily they can become slippery, unsafe and unattractive.
 Fortunately, most of this can be reversed with the right pressure washing equipment and experienced hands.
