--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -180,7 +180,7 @@ With over 30 years of industry experience, we provide reliable exterior cleaning
 
 <form id="quoteForm">
 <label for="sqm">How many square metres?*</label><br>
-<input type="number" id="sqm" name="sqm" min="1" step="0.01" required style="width:100%;padding:8px;margin:6px 0;"><br>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required style="width:100%;padding:10px;margin-bottom:15px;font-size16px;"><br>
 
 <input type="checkbox" id="jetwash" name="jetwash" checked>
 <label for="jetwash">Jet wash only</label><br>
