--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -19,6 +19,7 @@ font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
+  input, select,textarea{font-size: 16px !important;
 }
 
 /* HEADER */
