--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
 <title>Professional Pressure Washing in Askern DN6 | Driveways, Patios & Exterior Cleaning</title>
 
 <link rel="canonical" href="https://steely1968.github.io/">
@@ -19,7 +19,8 @@ font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
-  
+html{-webkit-text-size-adjust: 100%;
+     
 }
 
 /* HEADER */
