--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -19,10 +19,12 @@ font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
-html{-webkit-text-size-adjust: 100%;
-     
+html{
+-webkit-text-size-adjust: 100%;     
 }
-
+input#sqm {
+font-size: 15px;
+}
 /* HEADER */
 header{
 text-align:center;
