--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -292,6 +292,13 @@ Whether you’re in Askern or anywhere within 10 miles, simply call us and we’
 
 <footer>
 © Home Repairs 4U | Exterior Decorating • House Painting • Fence & Iron Rail Painting | Askern DN6 | Call 07735 873694
+  <p>Our Services:</p>
+<a href="/services/Exterior-decorating.html">Exterior Decorating</a> |
+<a href="/services/fence-installation.html">Fence Installation</a> |
+<a href="/services/garden.html">Garden</a> |
+<a href="/services/guttering.html">Guttering</a> |
+<a href="/services/Pressure-washing.html">Pressure Washing</a> |
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </footer>
 
 </body>
