--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -360,6 +360,14 @@ Whether you're in Askern or anywhere within 10 miles, simply call us and we’ll
 
 <footer>
 © Home Repairs 4U | Pressure Washing • Jet Washing • Exterior Cleaning | Askern DN6 | Call 07735 873694
+  <footer style="background-color: black; padding: 20px; text-align: center;">
+<p style="color: white;">Our Services:</p>
+<a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
+<a href="/services/fence-installation.html" style="color: white; margin: 0 10px;">Fence Installation</a>
+<a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
+<a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
+<a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
+<a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
 </footer>
 
 </body>
