--- a/services/upvc-restoration.html
+++ b/services/upvc-restoration.html
@@ -282,6 +282,14 @@ Call today to arrange a free consultation or schedule a visit to restore your pr
 
 <footer>
 © Home Repairs 4U | uPVC Restoration • Windows & Doors • Gutters & Fascia • Conservatories • Internal & External Valets | Askern DN6 | Call 07735 873694
+  <footer style="background-color: black; padding: 20px; text-align: center;">
+<p style="color: white;">Our Services:</p>
+<a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
+<a href="/services/fence-installation.html" style="color: white; margin: 0 10px;">Fence Installation</a>
+<a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
+<a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
+<a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
+<a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
 </footer>
 
 </body>
