--- a/index.html
+++ b/index.html
@@ -235,7 +235,14 @@ Services include conservatory roof cleaning, gutter and fascia maintenance, and 
 
 <footer>
 © Home Repairs 4U | Exterior Decorating • Fence Installation • Garden Maintenance • Gutter Replacement • Pressure Washing • uPVC Restoration | Askern DN6 | Call 07735 873694
-  <a href="/test.html" class="service-btn">View Garden Services</a>
+  <footer style="background-color: black; padding: 20px; text-align: center;">
+<p style="color: white;">Our Services:</p>
+<a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
+<a href="/services/fence-installation.html" style="color: white; margin: 0 10px;">Fence Installation</a>
+<a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
+<a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
+<a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
+<a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
 </footer>
 
 </body>
